2017-01-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More compiler warning options.

2017-01-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More compiler warning options.

  * gpasm/directive.c, gpasm/gpmsg.c, gpasm/special.c:
    More and talkative warning and error messages.
    Fixed this bug: "#301 GPASM warning message badly formatted"
    Thanks to Philippe Paternotte for the report.

  * libgputils/gpdis.c, libgputils/gplist.c, libgputils/gpsystem.c:
    More debug info.

  * gpasm/gpmsg.c, gpasm/gpmsg.h, libgputils/gpmessage.c,
    libgputils/gpmessage.h, libgputils/gpsystem.c,
    libgputils/gpsystem.h, libgputils/gpwritehex.c,
    libgputils/gpwritehex.h:
    Code formatting.

2016-12-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More clang warning options.

  * gpasm/preprocess.c, gpasm/scan.l, gpasm/util.c, gplink/gplink.c,
    libgputils/gpdis.c:
    Eliminated the compiler warnings.

  * libgputils/gpcofflink.c:
    More information about the missing symbols.
    Bug: "#300 GPLINK fails with assertion error"
    Thanks to James Dunne for the report.

  * libgputils/gpmessage.c, libgputils/gpmessage.h:
    New functions: gp_real_num_errors, gp_real_num_warnings and
    gp_real_num_messages.

  * gplink/parse.y, gplink/scan.l, libgputils/gpsym.c:
    Code formatting.

2016-12-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Fixed this bug: "#299 GPASM unexpected error"
    Thanks to Philippe Paternotte for the report.

  * gpasm/evaluate.c, gpasm/util.c:
    Fix a clang-3.7.0 and clang-3.8.0 bug. (Misleading warning.)

2016-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c:
    Fixed this bug: "#298 GPASM command line help - bad printing"
    Thanks to Philippe Paternotte for the report.

2016-12-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>